testdata/parse-errors/specs/concepts/tableDoesNotBelongToAnyStep.cpt
# Concept

|table|
|one|

* step1
